grammar.js
        source_file: $ => $.module_part,
        module_part: $ => seq(repeat($.import_decl), repeat1($.module_defn)),
        module_defn: $ => choice(
            $.function_defn,
            $.const_defn,
            $.type_defn,
            $.module_var_decl,
            $.listener_decl,
            $.class_defn,
            $.enum_decl,
            $.service_defn,
            $.xmlns_decl_stmt,
            $.annotation_decl,
        ),
        function_defn: $ => seq(optional($.metadata), optional("public"),
            optional($.function_quals),
            "function",
            $.identifier,
            $.signature,
            choice($.stmt_block,
                $.expr_function_body,
                $.external_function_body)),
        external_function_body: $ => seq("=", "external", ";"),
        signature: $ => prec(3, seq("(", optional($.param_list), ")", optional(seq("returns", $.type_desc)))),

        function_quals: $ => choice(
            seq($.transactional_qual, optional($.isolated_qual)),
            seq($.isolated_qual, optional($.transactional_qual)),
        ),
        isolated_qual: $ => "isolated",

        type_desc: $ => prec(1, choice(
            $.union_type_desc,
            $.intersection_type_desc,
            $.postfix_type_desc,
            $.object_type_desc,
            $.function_type_desc
        )),
        postfix_type_desc: $ => choice(
            $.primary_type_desc,
            $.optional_type_desc,
            $.array_type_desc
        ),

        array_type_desc: $ => prec.right(seq($.array_member_type_desc, repeat1($.array_dimensions))),
        array_dimensions: $ => seq("[", optional($.array_length), "]"),
        array_member_type_desc: $ => choice(
            $.type_desc
        ),
        primary_type_desc: $ => choice(
            $.nil_type_desc,
            $.singleton_type_desc,
            seq("(", $.type_desc, ")"),
            $.type_reference,
            $.error_type_desc,
            $.builtin_type_name,
            $.map_type_desc,
            $.stream_type_desc,
            $.future_type_desc,
            $.table_type_desc,
            $.record_type_desc,
            $.tuple_type_desc
        ),

        builtin_type_name: $ => prec.left(choice(
            "any",
            "anydata",
            "boolean",
            "byte",
            "decimal",
            "error",
            "float",
            "future",
            "handle",
            "int",
            "json",
            "never",
            "readonly",
            "stream",
            "string",
            "typedesc",
            "xml",
        )),

        type_reference: $ => prec(3, choice(
            $.identifier,
            $.qualified_identifier,
            $.builtin_type_qualified_identifier
        )),
        // This is a hack to make types like string:Char to work
        // otherwise it will match up the string and break
        future_type_desc: $ => seq("future", "<", $.type_desc, ">"),
        table_type_desc: $ => seq("table", "<", $.type_desc, ">", optional($.table_key_specifier)),
        table_key_specifier: $ => seq("key", "(", $.identifier, repeat(seq(",", $.identifier)), ")"),

        param_list: $ => choice(seq($.param, repeat(seq(",", $.param)), repeat(seq(",", $.defaultable_param)), repeat(seq(",", $.include_record_param)), optional(seq(",", $.rest_param))),
                                seq($.defaultable_param, repeat(seq(",", $.defaultable_param)), repeat(seq(",", $.include_record_param)), optional(seq(",", $.rest_param))),
                                $.rest_param),
        param: $ => seq($.type_desc, optional($.identifier)),
        stmt_block: $ => seq("{", repeat($.statement), "}"),

        statement: $ => choice(
            $.local_no_init_var_decl_stmt,
            $.local_var_decl_stmt,
            $.call_stmt,
            $.assign_stmt,
            $.compound_assign_stmt,
            $.destructuring_assign_stmt,
            $.worker_send_stmt,
            $.return_stmt,
            $.if_else_stmt,
            $.while_stmt,
            $.break_stmt,
            $.continue_stmt,
            $.foreach_stmt,
            $.panic_stmt,
            $.match_stmt,
            $.do_stmt,
            $.fail_stmt,
            $.xmlns_decl_stmt,
            $.lock_stmt,
            $.transaction_stmt,
            $.rollback_stmt,
            $.retry_stmt,
            $.fork_stmt,
            $.worker_declaration
        ),

        local_no_init_var_decl_stmt: $ => seq(optional("final"), $.typed_binding_pattern, ";"),
        local_var_decl_stmt: $ => seq(optional("final"), $.typed_binding_pattern, "=", $.expression, ";"),
        binding_pattern: $ => choice(
            $.identifier,
            $.wildcard_binding_pattern,
            $.list_binding_pattern,
            $.mapping_binding_pattern,
            $.error_binding_pattern
        ),

        call_stmt: $ => seq($.call_expr, ";"),
        call_expr: $ => choice(
            $.function_call_expr,
            $.method_call_expr,
            $.remote_call_expr,
            $.commit_expr,
            seq($.checking_keyword, $.call_expr)
        ),
        destructuring_assign_stmt: $ => seq($.wildcard_binding_pattern, "=", $.expression, ";"),

        wildcard_binding_pattern: $ => "_",

        variable_reference_expr: $ => $.identifier,
        return_stmt: $ => seq("return", optional($.expression), ";"),

        foreach_stmt: $ => seq("foreach", $.typed_binding_pattern, "in", $.expression, $.stmt_block, optional($.on_fail_clause)),

        do_stmt: $ => seq("do", $.stmt_block, optional($.on_fail_clause)),
        on_fail_clause: $ => seq("on", "fail", optional(seq(choice("var", $.type_desc), $.identifier)), $.stmt_block),
        fail_stmt: $ => seq("fail", $.expression, ";"),

        xmlns_decl_stmt: $ => seq("xmlns", $.string_literal, "as", $.identifier, ";"),
        lock_stmt: $ => seq("lock", $.stmt_block, optional($.on_fail_clause)),
        transaction_stmt: $ => seq("transaction", $.stmt_block, optional($.on_fail_clause)),
        rollback_stmt: $ => seq("rollback", optional($.expression), ";"),
        retry_stmt: $ => seq("retry", optional(seq("(", $.expression, ")")), $.transaction_stmt),
        fork_stmt: $ => seq("fork", "{", repeat1($.worker_declaration), "}"),
        worker_declaration: $ => seq("worker", $.identifier, optional(seq("returns", $.type_desc)), $.stmt_block),
        expression: $ => choice(
            $.new_expression,
            $.let_expr,
            $.anonymous_function_expr,
            $.arrow_function_expr,
            $.worker_receive_expression,
            $.natural_expr,
            $.object_constructor_expr,
            $.inner_expr,
            $.type_cast_expr,
            $.list_constructor_expr,
            $.mapping_constructor_expr,
            $.query_expr,
            $.checking_expr,
            $.trap_expr,
            $.start_expr,
            $.wait_expr,
            $.flush_expr,
            $.table_constructor_expr,
            "?"
        ),

        trap_expr: $ => prec(9, seq("trap", $.expression)),
        start_expr: $ => prec(9, seq("start", $.expression)),
        wait_expr: $ => prec(9, seq("wait", $.expression)),
        commit_expr: $ => "commit",
        flush_expr: $ => seq("flush", optional($.identifier)),
        table_constructor_expr: $ => seq("table", optional($.table_key_specifier), "[", optional($.expr_list), "]"),

        new_expression: $ => choice($.explicit_new_expression, $.implicit_new_expression),
        explicit_new_expression: $ => seq("new", $.const_reference_expr, $.arg_list),
        implicit_new_expression: $ => seq("new", optional($.arg_list)),
        const_reference_expr: $ => prec(1, choice($.identifier, $.qualified_identifier)),

        inner_expr: $ => prec.left(choice(
            $.logical_expr,
            $.logical_not_expr,
            $.nil_lifted_expr,
            $.equality_expr,
            $.relational_expr,
            $.type_test_expr,
            $.typeof_expr,
            $.primary_expr
        )),
        nil_lifted_expr: $ => choice(
            $.binary_bitwise_expr,
            $.shift_expr,
            $.additive_expr,
            $.multiplicative_expr,
            $.unary_numeric_expression
        ),
        multiplicative_expr: $ => prec.left(choice(
            seq($.expression, "*", $.expression),
            seq($.expression, "/", $.expression),
            seq($.expression, "%", $.expression)
        )),
        checking_keyword: $ => choice(
            "check",
            "checkpanic"
        ),
        primary_expr: $ => choice(
            $.literal,
            $.error_constructor_expr,
            $.member_access_expr,
            $.field_access_expr,
            $.call_expr,
            $.variable_reference_expr,
            $.conditional_expr,
            $.template_expression,
            seq("(", $.inner_expr, ")")
        ),

        query_expr: $ => prec.left(seq(optional($.query_construct_type), $.query_pipeline, choice($.select_clause, $.collect_clause), optional($.on_conflict_clause))),
        query_pipeline: $ => seq($.from_clause, repeat($.intermediate_clause)),
        intermediate_clause: $ => choice(
            $.from_clause,
            $.where_clause,
            $.let_clause,
            $.join_clause,
            $.order_by_clause,
            $.limit_clause,
            $.group_by_clause
        ),
        group_by_clause: $ => seq("group", "by", $.expression, repeat(seq(",", $.expression))),
        collect_clause: $ => prec.left(seq("collect", $.expression)),
        // TODO add keywords to highlight
        from_clause: $ => seq("from", $.typed_binding_pattern, "in", $.expression),

        typed_binding_pattern: $ => seq($.inferable_type_desc, $.binding_pattern),
        inferable_type_desc: $ => choice("var", $.type_desc),

        literal: $ => prec(1, choice(
            $.nil_literal,
            $.boolean_literal,
            $.int_literal,
            $.floating_point_literal,
            $.string_literal
        )),
        error_constructor_expr: $ => seq("error", optional($.type_reference), $.arg_list),
        list_constructor_expr: $ => seq("[", optional($.expr_list), "]"),
        access_target: $ => prec(1, choice(
            $.variable_reference_expr,
            $.field_access_expr,
            $.member_access_expr,
            $.call_expr
        )),

        field_access_expr: $ => prec.left(seq($.access_target, choice(".", "?."), $.identifier)),

        function_call_expr: $ => seq($.function_reference, $.arg_list),
        method_call_expr: $ => prec.left(seq($.access_target, choice(".", "?."), $.identifier, $.arg_list)),
        arg_list: $ => seq(
            "(",
            optional(seq(
                $._arg,
                repeat(seq(",", $._arg))
            )),
            ")"
        ),
        _arg: $ => choice(
            $.named_arg,
            $.rest_arg,
            $.positional_arg
        ),
        positional_arg: $ => $.expression,
        named_arg: $ => seq($.identifier, "=", $.expression),
        function_reference: $ => prec.left(choice($.identifier, $.qualified_identifier)),

        qualified_identifier: $ => seq($.module_prefix, ":", $.identifier),
        module_prefix: $ => prec(2, choice($.identifier)),

        variable_reference_expr: $ => choice(
            $.identifier,
            $.qualified_identifier
        ),

        int_literal: $ => prec(1, choice(
            $.decimal_number,
            $.hex_int_literal
        )),
        decimal_number: $ => choice(
            "0",
            seq($.non_zero_digit, repeat($.digit))
        ),
        non_zero_digit: $ => /[1-9]/,
        digit: $ => /[0-9]/,
        identifier: $ => /'?[A-Za-z][A-Za-z0-9_]*/,
        string_literal: $ => $.double_quoted_string_literal,
        template_substitution: $ => prec(1, seq("${", $.expression, "}")),
        service_defn: $ => seq(
            optional($.metadata),
            optional("isolated"),
            "service",
            optional($.type_desc),
            optional($.absolute_resource_path),
            "on",
            $.expression,
            "{",
            repeat($.service_member),
            "}"
        ),
        absolute_resource_path: $ => choice(
            "/",
            repeat1(seq("/", $.base_path_segment))
        ),
        service_member: $ => choice(
            $.resource_function_defn,
            $.method_defn,
            $.remote_method_defn,
            $.object_field
        ),
        resource_function_defn: $ => seq(
            optional($.metadata),
            optional($.function_quals),
            "resource",
            "function",
            $.identifier,
            $.resource_path,
            $.signature,
            $.stmt_block
        ),
        resource_path: $ => choice(
            seq($.resource_path_segment, repeat(seq("/", $.resource_path_segment))),
            "."
        ),
        resource_path_segment: $ => choice(
            $.identifier,
            $.string_literal,
            $.path_parameter
        ),
        path_parameter: $ => seq(
            "[",
            $.type_desc,
            optional("..."),
            $.identifier,
            "]"
        ),
        double_quoted_string_literal: $ => seq('"', optional($.string_body), '"'),
        string_body: $ => repeat1(choice(token.immediate(prec(1, /[^\\"\n]+/)), $.string_escape)),
        worker_receive_expression: $ => prec(9, seq(
            "<-",
            choice(
                $.identifier,
                "function",
                $.multiple_worker_receive,
                $.alternate_worker_receive
            )
        )),

        alternate_worker_receive: $ => prec.left(15, choice(
            seq(choice($.identifier, "function"), "|", choice($.identifier, "function")),
            seq($.alternate_worker_receive, "|", choice($.identifier, "function"))
        )),

        natural_expr: $ => seq("natural", "{", optional($.natural_body), "}"),
        natural_body: $ => repeat1(choice(
            $.template_substitution,
            $.natural_content
        )),
        natural_content: $ => choice(
            /[^}$]+/,
            "$"
        ),
    },
